2004-01-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.c (g_mime_shutdown): New public function to shutdown
	GMime. Fixes a segfault in applications that dynamically
	load/unload GMime during execution.

	* gmime/gmime-iconv.c (g_mime_iconv_init): Don't register an
	atexit handler.
	(g_mime_iconv_shutdown): Make public.

	* gmime/gmime-charset.c (g_mime_charset_map_init): Don't set a
	g_atexit handler for the shutdown routine.
	(g_mime_charset_map_shutdown): Make public.

2004-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-param.c: Disable debugging and conditionally disable
	warnings.

	* gmime/gmime-multipart.c: Disable debugging.

	* gmime/gmime-stream.c: Disable debugging.

	* gmime/internet-address.c: Same.

	* gmime/gmime-parser.c: Conditionally disable warnings.

2004-01-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-host-utils.c (g_gethostbyaddr_r): Fixed some compile
	problems in the IPv6 implementation.

2003-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-mmap.c (g_mime_stream_mmap_new): Don't add
	getpagesize() to the file length.
	(g_mime_stream_mmap_new_with_bounds): Same.

2003-12-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Don't immediately
	prompt for a passwd after receiving the NEED_PASSPHRASE status
	message. Instead, parse the userid that gpg needs a passwd for and
	store it on our context. Wait for a GET_HIDDEN status message
	before prompting, this way if the user has their gpg configured to
	use gpg-agent, the user won't get 2 passwd prompts.

2003-12-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_step_headers): If scanning for eoln
	results in finding inend, request a refill and try again (changed
	from inptr + 1 >= inend).

2003-12-05  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/internet-address.c (decode_domain): Make sure domain->len
	> 0 before checking domain->str[domain->len - 1].
